--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ContenedorActivity"></activity>
+        <activity android:name=".registrarRestauranteActivity"></activity>
+        <activity
+            android:name=".referencia"
+            android:label="@string/title_activity_referencia"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ContenedorActivity" />
         <activity android:name=".NuevoUsuarioActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
